# IsaacSim_Semantic

./: .gitattributes  .gitignore  PasswordlessSSH_IsaacSim_RemoteExecutionPrompt.md  semantic_capture_minimal.py
Materials/: excavator_keyboard_control.py
Materials/test2_analysis/: YOLO_ANALYSIS.md  analyze_yolo.py
scripts/260714_01semantic_worldModule/: README.md  articulation_adapter.py  articulation_stage_validator.py  capture_context.py  capture_launch_config.py  capture_timing.py  compare_render_quality.py  excavator_joint_motion.py  joint_control_profile.py  render_profile.py  run_capture_remote.sh  semantic_capture_custom.py  (+6 more)
scripts/260720_01JointPositionRecorder/: .gitignore  README.md  pyproject.toml
scripts/260720_01JointPositionRecorder/docs/: Sim_Fangshan_07_Articulation_Design.md
scripts/260720_01JointPositionRecorder/docs/tutorial/: 01_项目全景与核心概念.md  02_环境准备与第一次运行.md  03_配置系统与USD校验.md  04_运动规划器与控制状态机.md  05_Isaac适配层与GUI生命周期.md  06_轨迹记录器与数据格式.md  07_测试调试与常见问题.md  08_源码阅读路线与进阶练习.md  README.md
scripts/260720_01JointPositionRecorder/entrypoints/: show_panel.py
scripts/260720_01JointPositionRecorder/profiles/: excavator_four_joint_default.json
scripts/260720_01JointPositionRecorder/src/joint_position_recorder/: __init__.py  articulation_adapter.py  config.py  controller.py  gui.py  motion_planner.py  stage_validator.py  trajectory_recorder.py
scripts/260720_01JointPositionRecorder/tests/: conftest.py  isaac_articulation_smoke_test.py  isaac_gui_smoke_test.py  test_config.py  test_controller.py  test_motion_planner.py  test_trajectory_recorder.py
(+86 files in other folders)
